--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "devDependencies": {
     "@types/node": "^11.13.0",
     "@types/request-promise": "^4.1.42",
-    "typescript": "^3.4.1",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "tslint": "^5.15.0",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.4.1"
   },
   "dependencies": {
     "request": "^2.88.0",
